Irradiance Volume broken #62040

Closed
opened 2019-02-28 11:31:13 +01:00 by Marcin Twarowski · 3 comments

Win 10, GTX 1080

broken in 2.80 2019-02-28 04:40 dd9cedddae
worked in 2.80 2019-02-27 01:26 168d3fd528

I attached test file. irradiance_volume_bug.blend
Baking indirect lighting doesn't affect the scene. If you open it in yesterday's build 168d3fd528 it works properly.

Win 10, GTX 1080 broken in 2.80 2019-02-28 04:40 dd9cedddae69 worked in 2.80 2019-02-27 01:26 168d3fd528c4 I attached test file. [irradiance_volume_bug.blend](https://archive.blender.org/developer/F6729611/irradiance_volume_bug.blend) Baking indirect lighting doesn't affect the scene. If you open it in yesterday's build 168d3fd528c4 it works properly.

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Clément Foucault was assigned by Brecht Van Lommel 2019-02-28 11:33:28 +01:00

This issue was referenced by cd897c57f8

This issue was referenced by cd897c57f818a1159b7510e46f436183bffce9e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#62040
No description provided.