Fix T62040: Irradiance Volume broken

Was broken by 6a03199b50e02d57a50eb24441ef7be0b7e965ac.

Reintroducing the padding along with a few comment to not reproduce the
same errors.